Refactor: Use StringUtils to handle null and empty string checks.